<resources>
    <string name="app_name">Jogja Flight</string>
    <string name="SelamatDatang"> Selamat Datang </string>
    <string name="masuk">Masuk</string>
    <string name="hintuser"><font size="1">nama pengguna, email, no. HP</font></string>
    <string name="hintpass"><font size="1">sandi</font></string>
    <string name="tulisantombol">masuk</string>
    <string name="tulisanbantuan">bantuan</string>
    <string name="jadwal">Jadwal Kuliah</string>
    <string name="mka">Mata Kuliah</string>
    <string name="nilai">KHS</string>
    <string name="absensi">Absensi</string>
    <string name="halamankosong">Halaman Kosong</string>
    <string name="cari">Pencarian</string>
    <string name="bantu">Bantuan</string>
    <string name="keluar">Keluar</string>
    <string name="pembayaran">Status Pembayaran</string>
    <string name="pelanggaran">Daftar Pelanggaran</string>
    <string name="pengalaman">Pengalaman</string>
    <string name="performa">Nilai Performa</string>

    <string name="namapembayaran">NamaPembayaran</string>
    <string name="statuspembayaran">Status</string>
    <string name="tanggal">Tanggal</string>
    <string name="selengkapnya">Lihat Selengkapnya</string>
</resources>
