<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="@dimen/_10sdp">


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judul_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namapembayaran"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_acara_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_acara_lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statuspembayaran"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <Button
            android:background="@color/colorTransparant"
            android:id="@+id/detail_acara_selengkapnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/selengkapnya"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.v7.widget.CardView>